--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Dela+Gothic+One:300,400,500,600,700&display=swap);
+:root {
+  --ff: "Dela Gothic One";
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Consolas, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
